--- a/pixel-art/package.json
+++ b/pixel-art/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "pixel-art",
+  "name": "pixels",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
